# pan-py

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_EXAMPLES.md  Dockerfile  Makefile  README.md  openapi.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.sh
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: plan-segmentation-yolo.md
app/: __init__.py  detection.py  main.py  models.py  utils.py  uvicorn_logging_config.json
app/detection/: __init__.py  base.py  config.py  detector.py  segmenter.py
app/identification/: __init__.py  embedder.py  verifier.py
models/: .gitkeep
scripts/: generate_openapi.py
tests/: __init__.py  test_main.py
